'Fixed' record, working on stat_color.cpp now

--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>Stat_Color</name>
+  <name>stat_color</name>
   <version>0.1.1</version>
   <description>The Stat_Color package</description>
 
